tests/spec/emit/snapshots/slice_append_parenthesized_receiver.snap
---
source: tests/spec/emit/expressions.rs
description: |
  
  fn main() {
    let mut s = [1]
    s = (s).append(2)
    let _ = s
  }
---
package main

func main() {
	s := []int{1}
	s = append(s, 2)
	_ = s
}
