tests/spec/emit/snapshots/slice_append_reassign.snap
---
source: tests/spec/emit/prelude.rs
description: |
  
  fn test(items: Slice<int>) {
    let mut s = items
    s = s.append(1, 2, 3)
  }
---
package main

func test(items []int) {
	s := items
	s = append(s, 1, 2, 3)
}
