tests/spec/emit/snapshots/slice_append_side_effecting_receiver.snap
---
source: tests/spec/emit/expressions.rs
description: |
  
  fn make_i() -> int { 0 }
  
  fn main() {
    let mut outer = [[1], [2], [3]]
    outer[make_i()] = outer[make_i()].append(4)
  }
---
package main

func makeI() int {
	return 0
}

func main() {
	outer := [][]int{{1}, {2}, {3}}
	base := outer
	idx := makeI()
	recv := outer[makeI()]
	base[idx] = append(recv[:len(recv):len(recv)], 4)
}
