tests/spec/emit/snapshots/slice_append_statement.snap
---
source: tests/spec/emit/prelude.rs
description: |
  
  fn test(items: Slice<int>) -> Slice<int> {
    let mut s = items.clone()
    s = s.append(4)
    s
  }
---
package main

import "slices"

func test(items []int) []int {
	s := slices.Clone(items)
	s = append(s, 4)
	return s
}
