tests/spec/emit/snapshots/slice_capacity.snap
---
source: tests/spec/emit/prelude.rs
description: |
  
  fn test(s: Slice<int>) -> int {
    s.capacity()
  }
---
package main

func test(s []int) int {
	return cap(s)
}
