tests/spec/emit/snapshots/slice_clone.snap
---
source: tests/spec/emit/prelude.rs
description: |
  
  fn test(s: Slice<int>) -> Slice<int> {
    s.clone()
  }
---
package main

import "slices"

func test(s []int) []int {
	return slices.Clone(s)
}
