tests/spec/emit/snapshots/slice_contains.snap
---
source: tests/spec/emit/prelude.rs
description: |
  
  fn test(s: Slice<int>, v: int) -> bool {
    s.contains(v)
  }
---
package main

import "slices"

func test(s []int, v int) bool {
	return slices.Contains(s, v)
}
