tests/spec/emit/snapshots/slice_contains_ufcs.snap
---
source: tests/spec/emit/prelude.rs
description: |
  
  fn test(a: Slice<Slice<int>>, value: Slice<int>) -> bool {
    Slice.contains(a, value)
  }
---
package main

import "slices"

func test(a [][]int, value []int) bool {
	want := value
	return slices.ContainsFunc(a, func(e []int) bool { return slices.Equal(e, want) })
}
